[metadata]
name = edit_operation
version = 1.0.0
author = xcTorres
author_email = xcwhu2016@gmail.com
description = Get the edit operations of two string
long_description = file: README.md
url = https://github.com/xcTorres/edit_operation
project_urls =
    Bug Tracker = https://github.com/xcTorres/edit_operation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src